@@ -5,7 +5,7 @@ host                    = localhost
 protocol                = false
 port                    = 3306
 user                    = root
-pass                    = 
+pass                    =
 name                    = seagull
 
 [site]
@@ -18,7 +18,7 @@ urlHandler              = SGL_UrlParserSefStrategy
 name                    = Seagull Framework
 showLogo                = logo.gif
 
-; page compression can only be set in php.ini, however if it is set and 
+; page compression can only be set in php.ini, however if it is set and
 ; you wish to disable it, here is the place.
 compression             = false
 outputBuffering         = false
@@ -53,43 +53,6 @@ showBugReporterLink     = true
 enabled                 = true
 driver                  = SimpleNav
 stylesheet              = SglDefault_TwoLevel
-
-[table]
-block                   = block
-block_role              = block_role
-block_assignment        = block_assignment
-cart                    = cart
-category                = category
-contact                 = contact
-contact_us              = contact_us
-document                = document
-document_type           = document_type
-guestbook               = guestbook
-instant_message         = instant_message
-item                    = item
-item_addition           = item_addition
-item_type               = item_type
-item_type_mapping       = item_type_mapping
-login                   = login
-module                  = module
-newsletter              = newsletter
-organisation            = organisation
-organisation_type       = organisation_type
-org_preference          = org_preference
-permission              = permission
-preference              = preference
-price                   = price
-product                 = product
-rate					= rate
-rndmsg_message          = rndmsg_message
-role                    = role
-role_permission         = role_permission
-section                 = section
-sequence                = sequence
-user                    = usr
-user_permission         = user_permission
-user_preference         = user_preference
-user_session            = user_session
 
 [log]
 ;   Should Seagull log errors and other useful information?
@@ -148,12 +111,12 @@ winWidth                = 600
 
 [cookie]
 path                    = /
-domain                  = 
+domain                  =
 secure                  = false
 name                    = SGLSESSID
 
 [censor]
-;   choose any of SGL_CENSOR_DISABLE, SGL_CENSOR_EXACT_MATCH, 
+;   choose any of SGL_CENSOR_DISABLE, SGL_CENSOR_EXACT_MATCH,
 ;   SGL_CENSOR_WORD_BEGINNING, SGL_CENSOR_WORD_FRAGMENT
 mode                    = SGL_CENSOR_DISABLE
 replaceString           = *censored*
