@@ -1,0 +1,2 @@
+instant_message         = instant_message
+contact                 = contact
