@@ -1,0 +1,7 @@
+category                = category
+document                = document
+document_type           = document_type
+item                    = item
+item_addition           = item_addition
+item_type               = item_type
+item_type_mapping       = item_type_mapping
