@@ -1,0 +1,1 @@
+rndmsg_message          = rndmsg_message
